Bug 76641, back out baseURI property in the Node interface to fix binary compatibility. baseURI property is implemented in a different way on the DOM conversion branch, so baseURI will get back when the branch lands. This fix by jst, r=heikki, sr=brendan, a=chofmann.