content/xul/content/src/nsXULElement.cpp
@@ -1791,6 +1791,7 @@ nsXULElement::GetXMLBaseURI(nsIURI **aURI)
   return NS_OK;
 }
 
+#if 0
 NS_IMETHODIMP
 nsXULElement::GetBaseURI(nsAWritableString &aURI)
 {
@@ -1805,6 +1806,7 @@ nsXULElement::GetBaseURI(nsAWritableString &aURI)
   }
   return rv;
 }
+#endif
 
 
 //----------------------------------------------------------------------
