extensions/transformiix/source/xml/dom/mozImpl/MozillaNode.cpp
@@ -384,11 +384,40 @@ MBool Node::hasChildNodes() const
 **/
 String Node::getBaseURI()
 {
-    NSI_FROM_TX(Node)
+    Node* node=this;
+    ArrayList baseUrls;
     String url;
+    Node* xbAttr;
 
-    if (nsNode)
-        nsNode->GetBaseURI(url.getNSString());
-   
+    while(node) {
+        switch(node->getNodeType()) {
+         case Node::ELEMENT_NODE :
+            xbAttr = ((Element*)node)->getAttributeNode(XMLBASE_ATTR);
+            if(xbAttr)
+                baseUrls.add(new String(xbAttr->getNodeValue()));
+            break;
+
+         case Node::DOCUMENT_NODE :
+            baseUrls.add(new String(((Document*)node)->getBaseURI()));
+            break;
+
+         default:
+            break;
+        }
+        node = node->getParentNode();
+    }
+
+    if(baseUrls.size()) {
+        url = *((String*)baseUrls.get(baseUrls.size()-1));
+
+        for(int i=baseUrls.size()-2;i>=0;i--) {
+            String dest;
+            URIUtils::resolveHref(*(String*)baseUrls.get(i), url, dest);
+            url = dest;
+        }
+    }
+
+    baseUrls.clear(MB_TRUE);
+
     return url;
 }
